--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                             <button type="submit" class="btn btn-primary">Log In</button>
                         </form>
                     </div>
+                    <!-- Modal Footer -->
                     <div class="modal-footer">
 
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
